[package]
name = "consumer_db"
version = "0.1.0"
edition = "2024"

[dependencies]
spnagent = { git = "https://github.com/SrFeO3/spnagent" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
quinn = "0.11.8"

tokio-postgres = { version = "0.7", features = ["runtime"] }
