[package]
name = "consumer_db"
version = "0.2.0"
edition = "2024"

[dependencies]
quinn = "0.11"
spnagent = { git = "https://github.com/SrFeO3/spnagent" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["runtime"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }


