[package]
name = "consumer_h1"
version = "0.2.0"
edition = "2024"

[dependencies]
http-body-util = "0.1"
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
quinn = "0.11"
spnagent = { git = "https://github.com/SrFeO3/spnagent" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }